samples/_failures_safe/1761694439_9ba5ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4260c539.c: In function ‘main’:
./samples/SAFE/__tmp_4260c539.c:133:5: error: expected declaration or statement at end of input
  133 |     printf("=========================\n");
      |     ^~~~~~
